--- a/src/view/JDlgJmj_ConsultarVendas.form
+++ b/src/view/JDlgJmj_ConsultarVendas.form
@@ -176,12 +176,12 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Nome"/>
+        <Property name="text" type="java.lang.String" value="Cliente:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Valor:"/>
+        <Property name="text" type="java.lang.String" value="Total da Venda:"/>
       </Properties>
     </Component>
   </SubComponents>
