--- a/src/view/JDlgJmj_ConsultarBebidas.form
+++ b/src/view/JDlgJmj_ConsultarBebidas.form
@@ -181,7 +181,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Valor:"/>
+        <Property name="text" type="java.lang.String" value="Valor maior que:"/>
       </Properties>
     </Component>
   </SubComponents>
