--- a/src/view/JDlgJmj_ConsultarClientes.form
+++ b/src/view/JDlgJmj_ConsultarClientes.form
@@ -178,7 +178,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Cidade"/>
+        <Property name="text" type="java.lang.String" value="Cidade:"/>
       </Properties>
     </Component>
   </SubComponents>
