--- a/src/view/JFrmPrincipal.form
+++ b/src/view/JFrmPrincipal.form
@@ -23,7 +23,7 @@
                   <KeyStroke key="Ctrl+C"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/icons8-grupo-de-users.png"/>
+                  <Image iconType="3" name="/img/132253_users_icon.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Clientes"/>
               </Properties>
@@ -123,7 +123,7 @@
                   <KeyStroke key="Shift+Ctrl+C"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/132253_users_icon.png"/>
+                  <Image iconType="3" name="/img/icons8-clientes-32.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Clientes"/>
               </Properties>
@@ -151,7 +151,7 @@
                   <KeyStroke key="Shift+Ctrl+U"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/icon_grupo_usuario.png"/>
+                  <Image iconType="3" name="/img/icons8-primeiro-plano-do-grupo-selecionado-32.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Usuarios"/>
               </Properties>
@@ -165,7 +165,7 @@
                   <KeyStroke key="Shift+Ctrl+B"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/img/bebidas.png"/>
+                  <Image iconType="3" name="/img/icons8-bebidas-32.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Bebidas"/>
               </Properties>
@@ -263,7 +263,7 @@
         <Component class="javax.swing.JButton" name="jButton5">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/img/1564534_customer_man_user_account_profile_icon.png"/>
+              <Image iconType="3" name="/img/icons8-primeiro-plano-do-grupo-selecionado-32.png"/>
             </Property>
             <Property name="focusable" type="boolean" value="false"/>
             <Property name="horizontalTextPosition" type="int" value="0"/>
@@ -276,7 +276,7 @@
         <Component class="javax.swing.JButton" name="jBtnJmjClientes">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/img/132253_users_icon.png"/>
+              <Image iconType="3" name="/img/icons8-clientes-32.png"/>
             </Property>
             <Property name="focusable" type="boolean" value="false"/>
             <Property name="horizontalTextPosition" type="int" value="0"/>
