--- a/src/view/JDlgJMJ_Usuarios.form
+++ b/src/view/JDlgJMJ_Usuarios.form
@@ -126,14 +126,14 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jTxtCodigo" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel3" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jTxtNome" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jTxtApelido" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTxtNome" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -234,7 +234,12 @@
     <Component class="javax.swing.JComboBox" name="jCboNivel">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="0"/>
+          <StringArray count="4">
+            <StringItem index="0" value="Vendedor"/>
+            <StringItem index="1" value="Cliente"/>
+            <StringItem index="2" value="Usuario Comum"/>
+            <StringItem index="3" value="Fornecedor"/>
+          </StringArray>
         </Property>
       </Properties>
       <Events>
